--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,26 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class = "cont" id="qa-block">
-    <div>
-      <div>In programming languages, a closure is a technique for implementing lexically
+  <div class="outer" id="qa-block">
+    <div class="middle">
+      <div class="inner">
+        In programming languages, a closure is a technique for implementing lexically
         scoped name binding in a language with first-class functions. Operationally, a
         closure is a record storing a function together with an environment.</div>
     </div>
   </div>
-  <div class = "cont">
-    <div>
-      <div>У програмуванні замиканням називають підпрограму, що виконується в середовищі,
+  <div class="outer">
+    <div class="middle">
+      <div class="inner">
+        У програмуванні замиканням називають підпрограму, що виконується в середовищі,
         яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих
         змінних під час виконання.</div>
     </div>
   </div>
-  <div class = "cont">
-    <div>
-      <div>Замыкание в программировании — функция первого класса, в теле которой
+  <div class="outer">
+    <div class="middle">
+      <div class="inner">
+        Замыкание в программировании — функция первого класса, в теле которой
         присутствуют ссылки на переменные, объявленные вне тела этой функции в
         окружающем коде и не являющиеся её параметрами.</div>
     </div>
