--- a/src/index.html
+++ b/src/index.html
@@ -9,28 +9,31 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="outer" id="qa-block">
-    <div class="middle">
-      <div class="inner">
+  <div class="outer border-div" id="qa-block">
+    <div class="middle border-div">
+      <div class="inner border-div">
         In programming languages, a closure is a technique for implementing lexically
         scoped name binding in a language with first-class functions. Operationally, a
-        closure is a record storing a function together with an environment.</div>
+        closure is a record storing a function together with an environment.
+      </div>
     </div>
   </div>
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
+  <div class="outer border-div">
+    <div class="middle border-div">
+      <div class="inner border-div">
         У програмуванні замиканням називають підпрограму, що виконується в середовищі,
         яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих
-        змінних під час виконання.</div>
+        змінних під час виконання.
+      </div>
     </div>
   </div>
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
+  <div class="outer border-div">
+    <div class="middle border-div">
+      <div class="inner border-div">
         Замыкание в программировании — функция первого класса, в теле которой
         присутствуют ссылки на переменные, объявленные вне тела этой функции в
-        окружающем коде и не являющиеся её параметрами.</div>
+        окружающем коде и не являющиеся её параметрами.
+      </div>
     </div>
   </div>
 </body>
